# fcio-py

./: .gitignore  CHANGELOG.md  Makefile  README.md  create-pxd.sh  meson.build  pyproject.toml
.github/workflows/: build.yml  gh-pages-static.yml  gh-pages.yml  main.yml  publish-gh-release-automatic.yml  publish-gh-release-manual.yml  publish-pypi-release.yml  publish-release.yml  publish.yml
docs/: requirements.txt
docs/source/: conf.py  fcio.rst  index.rst
src/cmds/: __init__.py  cmds.py
src/fcio/: __init__.py  config.pyx  dead_interval_tracker.pyx  def_fcio.pxd  def_fsp.pxd  event.pyx  extension.pyx  fcio.c  fcio.pyx  fsp.pyx  recevent.pyx  status.pyx
src/fcio/cppyy_fcio/: config.py  event.py  fcio_cppyy.py  status.py
src/fcio/cy_fcio/: cfcio.pxd  cfcio_utils.pxd  cfsp.cpp  cfsp.pxd  cfsp.pyi  cfsp.pyx  config.html  config.pyx  cy_dead_interval_tracker.pyx  cy_fcio.pyx  cy_fcio_config.pyx  cy_fcio_event.pyx  cy_fcio_event_ext.pyx  cy_fcio_recevent.pyx  cy_fcio_recevent_ext.pyx  cy_fcio_status.pyx  cy_fsp.pyx  dead_interval_tracker.html  dead_interval_tracker.pyx  event.html  event.pyx  extension.html  extension.pyx  fcio.c  fcio.html  fcio.pyx  fcio_def.pxd  recevent.html  recevent.pyx  status.html  status.pyx
src/fcio/cy_fsp/: cy_fsp.pyx  fsp.pyx  fsp_def.pxd
subprojects/: bufio.wrap  fc-stream-processor.wrap  fcio.wrap  libfsp.wrap  tmio.wrap
tests/: test_eventparsing.py  test_fspparsing.py  test_integration.py  test_mem_parsing.py  test_platform.py
tools/: create-pxd.sh  version_util.py
