[build-system]
build-backend = "mesonpy"
requires = [
  "meson-python",
  "meson >= 1.3.0",
  "Cython >= 3.0",
  "numpy >= 2.0.0rc1",
  "GitPython",
]

[project]
dynamic = ['version']
name = "fcio"
description = "FlashCam File Format (FCIO) reader for python."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MPL-2.0" }
authors = [{ name = "Simon Sailer", email = "simon.sailer@mpi-hd.mpg.de" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy >= 1.23.5"]

[project.urls]
Homepage = "https://github.com/FlashCam/fcio-py"
Repository = "https://github.com/FlashCam/fcio-py.git"
Issues = "https://github.com/FlashCam/fcio-py/issues"
Changelog = "https://github.com/FlashCam/fcio-py/blob/main/CHANGELOG.md"
Documentation = "https://flashcam.github.io/fcio-py/"

[tool.meson-python.args]
dist = [
  '--include-subprojects',
] # required to include the c sources in the source distribution
setup = [
  '-Dbuildtype=release',       # already default; here to allow developers quick switching
  '-Db_ndebug=false',          # default: if-release. bufio/tmio use asserts in tests.
  '--wrap-mode=forcefallback',
]
# compile = ['--verbose']
install = [
  '--skip-subprojects',
] # don't install subprojects, we only need the c sources as cython input, no installed libraries

[tool.local.cythonize.kwargs.directive]
# This section can contain compiler directives
# Ref: https://github.com/cython/cython/blob/d6e6de9/Cython/Compiler/Options.py#L170-L242
embedsignature = "True"
emit_code_comments = "True"
linetrace = "True"
profile = "True"
language_level = "3str"
